# fastapi_control_system

./: Makefile  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2024_01_08_1221-a534eb1eef84_initial_commit.py  2024_01_08_1456-e3164fb9df0e_added_user_id_to_the_controllers_table.py  2024_05_28_2224-f231b589d550_added_read_and_write_addresses_fields_.py  2024_05_28_2252-61730e38ef88_added_low_and_high_limit_fields_in_.py
src/: config.py  database.py  main.py  schemas.py
src/auth/: base_config.py  dependencies.py  manager.py  models.py  schemas.py
src/controller/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/tasks/: __init__.py  tasks.py  utils.py
